--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,8 +6,8 @@ body{
 #navBar{
     border-bottom: 2px solid black;
     width: auto;
-    height: 80px;
-    background-color: #628fc2;
+    height: 100px;
+    background-color: #6270c2;
     margin: 0px;
     display: flex;
     flex-direction: row;
@@ -16,12 +16,15 @@ body{
 }
 
 #navBarTitle{
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0px;
-    padding: 10px;
+    font-size: 40px;
+    font-style: italic;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    margin: 5px;
+    padding: 5px;
     border: 2px solid red;
     align-items: center;
     text-align: center;
+    flex-grow: 1;
     flex-shrink: 1;
     width: 30%;
 }
@@ -36,6 +39,7 @@ body{
     border: 2px solid black;
     align-items: center;
     text-align: center;
+    flex-grow: 2;
     flex-shrink: 1;
     width: 20%;
     height: auto;
@@ -43,6 +47,14 @@ body{
     height: 40%;
     border-radius: 30px
 }
+
+#contentBox{
+    width: auto;
+    background-color: blue;
+
+}
+
+
 
 
 
