--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,8 +4,9 @@ body{
 
 }
 #navBar{
+    top: 0;
     border-bottom: 2px solid black;
-    width: auto;
+    width: 100%;
     height: 100px;
     background-color: #6270c2;
     margin: 0px;
@@ -13,6 +14,7 @@ body{
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+    /* overflow: hidden; */
 }
 
 #navBarTitle{
@@ -49,10 +51,38 @@ body{
 }
 
 #contentBox{
-    width: auto;
-    background-color: blue;
+    /* background-color: blue; */
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    background-image: url("../images/DoghramjiBanner.jpg");
+    height: 100%;
+    width: 100%;
+    background-repeat: no-repeat;
+}
+
+.contentBoxItem{
+    margin: 10px;
+    font-size: 50px;
+    padding: 0px;
+    margin: 0px;
+    color: white;
+    width: 400px;
+    flex-flow: column wrap;
+    border: 2px solid red;
+    background-color: grey;
+    opacity: .9;
 
 }
+
+.flexImage{
+    border-radius: 25%;
+    border: 1px solid black;
+    height: 30%;
+    width: 25%;
+}
+
+
 
 
 
